# bldhnd

./: .gitignore  CREDITS.md  Cargo.toml  README.md  devenv.nix  flake.nix  result  rust_out
_assets/: Delta.flf  splash.txt
app/: Cargo.toml
app/src/: data.rs  events.rs  lib.rs  logs.rs  main.rs
app/src/fs/: mod.rs
app/src/ui/: mod.rs
app/src/ui/components/: button.rs  input.rs  mod.rs  modal.rs  radio.rs  rainbow.rs  scroll.rs  sonner.rs
app/src/ui/views/: demo.rs  home.rs  library.rs  logs.rs  mod.rs  results.rs  search.rs  settings.rs
libs/boba/: Cargo.toml  ROADMAP.md
libs/boba/examples/: gallery.rs  layout.rs  layout_dump.rs
libs/boba/src/: events.rs  lib.rs  surface.rs  theme.rs
libs/boba/src/components/: anim.rs  asciiimg.rs  bigtext.rs  border.rs  button.rs  filepicker.rs  form.rs  input.rs  layer.rs  layout.rs  list.rs  mod.rs  modal.rs  paginator.rs  spinner.rs  stopwatch.rs  style.rs  syntax.rs  table.rs  tabs.rs  textarea.rs  tree.rs  viewport.rs
libs/fz/: Cargo.toml
libs/fz/src/: lib.rs
libs/slsk/: Cargo.toml
libs/slsk/src/: client.rs  error.rs  lib.rs
libs/slsk/src/peer/: conn.rs  mod.rs  transfer.rs
libs/slsk/src/proto/: frame.rs  mod.rs  msg.rs  peer_msg.rs
libs/slsk/src/server/: conn.rs
nixos/: bldhnd.nix
server/: Cargo.toml
server/_schema/: Untitled-1.json
server/src/: lib.rs  main.rs  mb.rs  tm.rs  tv.rs
server/src/mb/: mod.rs  ty.rs
server/src/wikidata/: mod.rs  ty.rs
