[package]
name = "bldhound"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
futures = "0.3.32"
ratatui = { version = "0.30.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
tracing = "0.1.44"
uuid = { version = "1.23.3", features = ["v4"] }

[dependencies.slsk]
path = "../libs/slsk"
