[package]
name = "bldhnd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.45"
crossterm = "0.29.0"
dashmap = "6.2.1"
figlet-rs = "1.0.0"
futures = "0.3.32"
futures-signals = "0.3.34"
milrouter = "1.0.2"
rand = "0.10.1"
ratatui = { version = "0.30.1", features = ["unstable-widget-ref"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
to_and_fro = "0.7.1"
tokio = "1.52.3"
tracing = "0.1.44"
unicode-width = "0.2.2"
walkdir = "2.5"
tracing-subscriber = "0.3.23"
urlencoding = "2.1.3"
uuid = { version = "1.23.3", features = ["v4"] }
zeroize = "1.9.0"

[dependencies.slsk]
path = "../libs/slsk"

[dependencies.bh-server]
path = "../server"
