[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-compression = { version = "0.4.42", features = ["tokio", "gzip", "xz"] }
tokio-util = { version = "0.7.7" }
futures = "0.3.32"
futures-util = "0.3.32"
milrouter = "0.3.1"
redb = "4.1.0"
reqwest = { version = "0.13.4", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tar = "0.3.1"
tracing = { version = "0.1.44", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
