[package]
name = "boba"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
crossterm = "0.29.0"
figlet-rs = "1.0.0"
rand = "0.10.1"
ratatui = { version = "0.30.1", features = ["unstable-widget-ref"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
tracing = "0.1.44"
unicode-width = "0.2.2"
futures-signals = "0.3.34"
uuid = { version = "1.23.3", features = ["v4"] }
futures = "0.3.32"
